pvinida-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pvindia-ingress
  

  annotations:
    # kubernetes.io/tls-acme: "true"
    # nginx.ingress.kubernetes.io/app-root: /get_data.php
    kubernetes.io/ingress.class: "nginx"    
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/force-ssl-redirect: 'false'
    kubernetes.io/ingress.allow-http: "true"

spec:
  tls:
  - hosts:
    - pvindia.iplon.co.in
    secretName: pvindia-tls-prod

  rules:
  - host: pvindia.iplon.co.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: iplon-apache-pvindia
            port: 
              number: 80
